# Bot_CantinaIF

./: .breakpoints  COPIA DO COMANDO PEDIDO SEM ALTERAR  Completo.py  Lista_De_Abreviaturas  Teste_PEDIDO.py  Teste_Rebeca.py  b.py  botplanilhatest-1fc9cdf38367.json  main.py  pyproject.toml  ver_bagunçada.py  ver_bot+str.py  ver_erro_process.py
