[tool.poetry]
name = "repl_python3_PlaTestPy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gspread = "^4.0.1"
python-telegram-bot = "^13.7"
pandas = "^1.3.2"
schedule = "^1.1.0"
gspread-dataframe = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
